<resources>
    <string name="app_name">Course APP</string>
    <string name="action_settings">Settings</string>
    <string name="usernamehint">Username/emailid</string>
    <string name="passwordhint">Password</string>
    <string name="login_button_hint">Login</string>
    <string name="create_act_login">Create Account</string>
    <string name="create_act_firstname">First Name</string>
    <string name="create_act_lastname">Last Name</string>
    <string name="create_act_username">User Name</string>
    <string name="create_act_button">Create Account</string>
</resources>
