<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightgray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="196dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/createactfirstname"
                android:layout_margin="10dp"
                android:text="@string/create_act_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/create_act_lastname"
                android:id="@+id/createactlastname"
                android:layout_below="@+id/createactfirstname"/>
            <EditText
                android:id="@+id/createactusername"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="@string/create_act_username"
                android:layout_below="@+id/createactlastname"
                />
            <EditText
                android:id="@+id/createactpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/passwordhint"
                android:layout_below="@id/createactusername"
                android:inputType="textPassword"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_act_button"
                android:layout_below="@id/createactpassword"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>